# gaijin_jam

./: .clang-format  CMakeLists.txt  README.md  Ramazan.cpp  main.cpp  main_for_character.cpp
include/: Cell.h  Level.h  building.h  button.h  character.h  characters.h  game.h  gameSession.h  makeAttackBuilding.h  makeBuilding.h  makeCharacters.h  makeFreeObjects.h  menu.h  moving_object.h  store.h  textBox.h  usefulFunctions.h
src/: Cell.cpp  Level.cpp  Ramazan.cpp  building.cpp  characters.cpp  game.cpp  main.cpp  makeFreeObjects.cpp  moving_object.cpp
